[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/SuperChart/SuperChart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Demo/Demo.gd" type="Script" id=2]
[ext_resource path="res://Demo/FuturaBookBT.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://DarkTheme/Dark.theme" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 1
font_data = ExtResource( 3 )

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="SuperChart" parent="." instance=ExtResource( 1 )]
theme = ExtResource( 4 )
line_width = 2.0
point_size = Vector2( 12, 12 )
pool_point_color = PoolColorArray( 1, 0.164706, 0, 1, 0, 1, 0.6, 1, 0, 0, 0, 0, 0, 0, 0, 0 )
pool_line_color = PoolColorArray( 0.733333, 0.0666667, 0.0666667, 1, 0.101961, 0.635294, 0.423529, 1 )
grid_line_width = 1.0
font_x_label = SubResource( 1 )
font_y_label = SubResource( 2 )
font_line_title_info = SubResource( 3 )
zoom_max = 0.01
font_view_data_title = SubResource( 4 )
font_view_data_content = SubResource( 3 )

[node name="LabelFPS" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="."]
margin_left = 17.0
margin_top = 513.0
margin_right = 76.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 5 )
text = "â€”"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
